# evex

./: .clangd  .gitignore  CMakeLists.txt  build.sh  evex.c  util.c
apps/: CMakeLists.txt  evex-v1.c  evex.c  evex.cpp  evex2.cpp  hello.cpp
include/evex/: evex.h  evex.hpp  tokenizer.hpp  util.hpp
include/util/: util.hpp
src/: CMakeLists.txt  evex.c  tokenizer.cpp  util.c  util.cpp
